Fix new rules service stuff

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -132,31 +132,7 @@ block content
                 a(href, ng-click="removeModUser(getUserEmail(modUser))")
                   span(class="glyphicon glyphicon-remove")
             hr
-            buton.btn.btn-primary(ng-click="displayAddRuleModal()") ADD RULE MODAL
-            hr
-            form.navbar-form(style="padding: 0", name="addRuleForm")
-              label Rule Type
-              | &nbsp;
-              select(ng-model="newRule.ruleType")
-                option(value="canView") Can View
-                option(value="canViewBusy") Can View Busy
-                option(value="canNotView") Cannot View
-              br
-              label User Group
-              br
-              select(ng-model="userGroup", ng-options="group.name for group in userGroups")
-              | &nbsp;
-              button.btn(ng-click="addUserGroupToRule()") Add User Group
-              ul(style='list-style-type: none; padding-left: 10px;')
-                li(ng-repeat="displayGroup in userGroupDisplay") {{ displayGroup }}
-              label User Email
-              br
-              input(type="text", ng-model="userEmail", list="emails")
-              | &nbsp;
-              button.btn(ng-click="addUserEmailToRule()") Add User Email
-              ul(style='list-style-type: none; padding-left: 10px;')
-                li(ng-repeat="userEmail in newRule.userIds") {{ userEmail }}
-              button.btn.btn-primary(ng-disabled="addRuleForm.$invalid", ng-click="addRule()") Add Rule
+            buton.btn.btn-primary(ng-click="displayAddRuleModal()") Add Rule
             hr
             form(name="addModUserForm")
               input(type="text", ng-model="inputModUserEmail", list="emails")
