--- a/views/login.jade
+++ b/views/login.jade
@@ -9,6 +9,6 @@ block content
     .form-group
       input.form-control(type='password', name="password", placeholder='Password')
     button.btn.btn-success(type='submit') Log in
-    &nbsp;
+    | &nbsp;
     a(href='/register')
       button.btn.btn-primary(type="button") No account? Register here!
